--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="page-container">
         <header class="center-l">
-            <h1>Around Oz 2025...</h1>
+            <h1 class="main-title">Around Oz 2025...</h1>
             <h2>Links to each regional blog covering our travels.</h2>
         </header>
         <main>
