--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="page-container">
         <header class="center-l">
             <h1 class="main-title">Around Oz 2025...</h1>
-            <h2>Links to each regional blog covering our travels.</h2>
+            <h2>Links to each regional blog of our travels.</h2>
         </header>
         <main>
 
