--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div id="page-container">
         <header class="center-l">
-            <h1 class="main-title">Around Oz 2025...</h1>
-            <h2>Links to each regional blog of our travels.</h2>
+            <h1 class="main-title">Lap Around Oz 2025...</h1>
+            <h2>Links to each of the regional blogs about our travels around the Great Southern Land.</h2>
         </header>
         <main>
 
